# dataready

./: .gitignore  LICENSE  README.md  pyproject.toml
dataready/: __init__.py  diagnostics.py  fixer.py  report.py  scanner.py  scorer.py  utils.py
github/workflows/: ci.yml
tests/: report.html  test.py  test_dataready.py
